Expose API v1alpha3 for namespaces
