# docs/swagger.json
@@ -13,11 +13,11 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/v1alpha1",
+    "basePath": "/v1alpha2",
     "paths": {
-        "/": {
+        "/namespace": {
             "get": {
-                "description": "Retrieve a list of all namespaces in DataBuddy system.\nIf RBAC is enabled, the list returned contains only namespaces\nvisible to the authenticated user.\nOptional query parameter \"prefix\" can be provided to return\nonly namespaces with the given prefix.",
+                "description": "List all namespaces.",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,12 +27,12 @@
                 "tags": [
                     "namespace"
                 ],
-                "summary": "List accessible namespaces",
+                "summary": "List all namespaces",
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "\"\"",
-                        "description": "Prefix for namespace names",
+                        "default": "",
+                        "description": "Namespace name prefix",
                         "name": "prefix",
                         "in": "query"
                     }
@@ -43,16 +43,16 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/v1alpha2.Namespace"
+                                "type": "string"
                             }
                         }
                     }
                 }
             }
         },
-        "/{namespace}": {
+        "/namespace/{name}": {
             "get": {
-                "description": "Retrieve detailed information about namespace by name.",
+                "description": "Get namespace by name.",
                 "consumes": [
                     "application/json"
                 ],
@@ -62,12 +62,12 @@
                 "tags": [
                     "namespace"
                 ],
-                "summary": "Get namespace by name",
+                "summary": "Get namespace",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Name of the namespace to retrieve",
-                        "name": "namespace",
+                        "description": "Namespace name",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     }
@@ -76,25 +76,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.Namespace"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/v1alpha2.RequestError"
+                            "$ref": "#/definitions/v1alpha3.NamespaceStatus"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.RequestError"
+                            "$ref": "#/definitions/v1alpha3.RequestError"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Modify namespace with \"name\" (path parameter) to match\nthe provided namespace object. Create namespace if does not exist.\nThe name provided in path and name in request body (if set) MUST\nbe the same.",
+                "description": "Create the namespace with given name and spec.\nUpdate fields of given namespace based on body if it already\nexists.",
                 "consumes": [
                     "application/json"
                 ],
@@ -104,22 +98,22 @@
                 "tags": [
                     "namespace"
                 ],
-                "summary": "Set namespace",
+                "summary": "Create/update namespace",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Name of the namespace",
-                        "name": "namespace",
+                        "description": "Namespace name",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "The namespace object",
+                        "description": "Namespace fiels to update",
                         "name": "spec",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.Namespace"
+                            "$ref": "#/definitions/v1alpha3.NamespaceSpec"
                         }
                     }
                 ],
@@ -127,19 +121,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.Namespace"
+                            "$ref": "#/definitions/v1alpha3.NamespaceStatus"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.RequestError"
+                            "$ref": "#/definitions/v1alpha3.RequestError"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Delete provided namespace.\nThis method also deletes all collections that are part of the namespace.",
+                "description": "Mark given namespace as deleted.\nAll the objects stored within the namespace are scheduled for\ndeletion asynchronously. While the namespace is in the process\nof being deleted, GET-ing it will return the object with status\nattribute \"DeleteIndex\" set to index of the delete operation.\nOnce all the contents of the namespace are deleted, GET on\nthe namespace will return HTTP 404.",
                 "consumes": [
                     "application/json"
                 ],
@@ -149,11 +143,12 @@
                 "tags": [
                     "namespace"
                 ],
+                "summary": "Delete namespace",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Name of the namespace",
-                        "name": "namespace",
+                        "description": "Namespace name",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     }
@@ -162,13 +157,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.Namespace"
+                            "$ref": "#/definitions/v1alpha3.NamespaceStatus"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/v1alpha2.RequestError"
+                            "$ref": "#/definitions/v1alpha3.RequestError"
                         }
                     }
                 }
@@ -176,15 +171,50 @@
         }
     },
     "definitions": {
-        "v1alpha2.Namespace": {
+        "v1alpha3.NamespaceSpec": {
             "type": "object",
             "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "labels": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
                 "name": {
                     "type": "string"
                 }
             }
         },
-        "v1alpha2.RequestError": {
+        "v1alpha3.NamespaceStatus": {
+            "type": "object",
+            "properties": {
+                "createIndex": {
+                    "type": "string"
+                },
+                "deleteIndex": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "labels": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updateIndex": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1alpha3.RequestError": {
             "type": "object",
             "properties": {
                 "error": {
